# Lab2Modelling

./: .env.example  .gitignore  Pipfile  README.md  pyproject.toml  simulate.py  simulate_bank.py  simulate_hospital.py
app/: config.py
utils/: load.py  statistic.py
